- detect 함수 완성 - image 불러오기 - matching 시 결과 표시

--- a/src/EdgebaseTemplateMatching/EdgebaseTemplateMatching.vcxproj
+++ b/src/EdgebaseTemplateMatching/EdgebaseTemplateMatching.vcxproj
@@ -167,6 +167,7 @@
       <PreprocessorDefinitions>_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>./;$(SolutionDir)include;C:\OpenCV_org\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
