- 파라미터 추가 - thread 작업

--- a/src/EdgebaseTemplateMatching/EdgebaseTemplateMatching.vcxproj
+++ b/src/EdgebaseTemplateMatching/EdgebaseTemplateMatching.vcxproj
@@ -167,7 +167,8 @@
       <PreprocessorDefinitions>_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>./;$(SolutionDir)include;C:\OpenCV_org\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <Optimization>Disabled</Optimization>
+      <Optimization>MaxSpeed</Optimization>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
